--- a/.github/workflows/docker-ecr.yml
+++ b/.github/workflows/docker-ecr.yml
@@ -9,9 +9,21 @@ jobs:
   push_image:
     runs-on: ubuntu-latest  # Run the job on an Ubuntu environment
 
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v3  # Checkout the repository code
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials with OIDC
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          role-session-name: github-actions
+          aws-region: us-east-1 
 
     - name: Log in to Amazon ECR Public
       uses: aws-actions/amazon-ecr-login@v1  # Action to authenticate to Amazon ECR
