--- a/.github/workflows/docker-ecr.yml
+++ b/.github/workflows/docker-ecr.yml
@@ -9,33 +9,28 @@ jobs:
   push_image:
     runs-on: ubuntu-latest  # Run the job on an Ubuntu environment
 
-    
     steps:
       - name: Checkout code
         uses: actions/checkout@v3  # Checkout the repository code
 
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v4
-
       - name: Configure AWS credentials with OIDC
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}  # Use an assumed role for AWS credentials
           role-session-name: github-actions
-          aws-region: us-east-1 
+          aws-region: us-east-1  # Specify your AWS region
 
-    - name: Log in to Amazon ECR Public
-      uses: aws-actions/amazon-ecr-login@v1  # Action to authenticate to Amazon ECR
-      with:
-        region: us-east-1  # Specify your AWS region
+      - name: Log in to Amazon ECR Public
+        uses: aws-actions/amazon-ecr-login@v1  # Action to authenticate to Amazon ECR
+        with:
+          region: us-east-1  # Specify your AWS region
 
-    - name: Tag Local Image
-      run: |
-        # Tag the local image with the ECR public repository URI
-        docker tag latest public.ecr.aws/m0h2p2z6/testecr:latest
+      - name: Tag Local Image
+        run: |
+          # Tag the local image with the ECR public repository URI
+          docker tag latest public.ecr.aws/m0h2p2z6/testecr:latest
 
-    - name: Push Docker image to Amazon ECR Public
-      run: |
-        # Push the image to your public ECR repository
-        docker push public.ecr.aws/m0h2p2z6/testecr:latest
+      - name: Push Docker image to Amazon ECR Public
+        run: |
+          # Push the image to your public ECR repository
+          docker push public.ecr.aws/m0h2p2z6/testecr:latest
