--- a/.github/workflows/docker-ecr.yml
+++ b/.github/workflows/docker-ecr.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   push_image:
     runs-on: ubuntu-latest  # Run the job on an Ubuntu environment
-
+    permissions: write-all
     steps:
       - name: Checkout code
         uses: actions/checkout@v3  # Checkout the repository code
