--- a/.github/workflows/docker-ecr.yml
+++ b/.github/workflows/docker-ecr.yml
@@ -17,9 +17,9 @@ jobs:
       - name: Configure AWS credentials with OIDC
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}  # Use an assumed role for AWS credentials
-          role-session-name: github-actions
-          aws-region: us-east-1  # Specify your AWS region
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          region: us-east-1
 
       - name: Log in to Amazon ECR Public
         uses: aws-actions/amazon-ecr-login@v1  # Action to authenticate to Amazon ECR
@@ -37,4 +37,4 @@ jobs:
       - name: Push Docker Image to Amazon ECR Public
         run: |
           docker push public.ecr.aws/m0h2p2z6/testecr:latest  # Push the correctly tagged image to ECR
-########
+##########
