--- a/.github/workflows/docker-ecr.yml
+++ b/.github/workflows/docker-ecr.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3  # Checkout the repository code
 
-      - name: Configure AWS credentials with OIDC
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -37,4 +37,4 @@ jobs:
       - name: Push Docker Image to Amazon ECR Public
         run: |
           docker push public.ecr.aws/m0h2p2z6/testecr:latest  # Push the correctly tagged image to ECR
-##########
+########
